# autoclicker

./: .gitignore  CMakeLists.txt  README.md
include/: gui.hpp  mc_autoclicker.hpp
src/: gui.cpp  main.cpp  mc_autoclicker.cpp
